-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Linux v5.9-rc7-8-g15ed2851b0f4
ext4: remove unused argument from ext4_(inc|dec)_count
This breaks when the 'handle' is treated as inode with random crashes like the following:
PID: 1901 TASK: ffff8a4d4151c740 CPU: 0 COMMAND: "mount.lustre"
#0 [ffffafe480aef6b0] panic at ffffffffb0f54b17
/home/shaun/rpmbuild/BUILD/kernel-5.10.9/linux-5.10.9-1.ldiskfs.el8.x86_64/kernel/panic.c: 360
#1 [ffffafe480aef750] no_context at ffffffffb066a2f9
/home/shaun/rpmbuild/BUILD/kernel-5.10.9/linux-5.10.9-1.ldiskfs.el8.x86_64/arch/x86/mm/fault.c: 747
#2 [ffffafe480aef7b8] exc_page_fault at ffffffffb0f953c3
/home/shaun/rpmbuild/BUILD/kernel-5.10.9/linux-5.10.9-1.ldiskfs.el8.x86_64/arch/x86/mm/fault.c: 1320
#3 [ffffafe480aef810] asm_exc_page_fault at ffffffffb1000ade
/home/shaun/rpmbuild/BUILD/kernel-5.10.9/linux-5.10.9-1.ldiskfs.el8.x86_64/./arch/x86/include/asm/idtentry.h: 583
[exception RIP: inc_nlink+32]
RIP: ffffffffb0934f80 RSP: ffffafe480aef8c0 RFLAGS: 00010202
RAX: 0000000100037655 RBX: ffff8a4d4467ddc8 RCX: 0000000000000000
RDX: 0000000000000001 RSI: ffff8a4d44792bd0 RDI: ffff8a4d4467ddc8
RBP: ffff8a4d44792bd0 R8: 000000000000004c R9: 0000000000000003
R10: 0000000000000000 R11: ffff8a4d41ba8700 R12: ffff8a4d41ba8700
R13: ffffafe480aefb40 R14: ffff8a4d43961800 R15: ffff8a4d41ba8b00
ORIG_RAX: ffffffffffffffff CS: 0010 SS: 0018
/home/shaun/rpmbuild/BUILD/kernel-5.10.9/linux-5.10.9-1.ldiskfs.el8.x86_64/./arch/x86/include/asm/atomic64_64.h: 102
#4 [ffffafe480aef8c0] ldiskfs_inc_count at ffffffffc0a4ca9e [ldiskfs]
#5 [ffffafe480aef8d0] osd_ref_add at ffffffffc15fcd65 [osd_ldiskfs]
#6 [ffffafe480aef8f8] __local_file_create at ffffffffc0cff324 [obdclass]
#7 [ffffafe480aef950] local_file_find_or_create at ffffffffc0cffd37 [obdclass]
#8 [ffffafe480aef9a0] mgs_fs_setup at ffffffffc1686712 [mgs]
#9 [ffffafe480aefa00] mgs_init0 at ffffffffc16821ad [mgs]
#10 [ffffafe480aefae0] mgs_device_alloc at ffffffffc1682c7a [mgs]
- is related to
-
LU-14195 Support for linux kernel version 5.10
-
- Resolved
-